--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+            <iframe name="tela" id="tela" src="home.html" frameborder="1"></iframe>
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
