--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <iframe name="tela" id="tela" src="home.html" frameborder="1"></iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="instagram.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt="GitHub"></a>
+            
         </section>
     </main>
 </body>
